[gd_scene load_steps=3 format=3 uid="uid://cejyjglckynxm"]

[ext_resource type="Script" uid="uid://bimiltqwrs6fg" path="res://server/server.gd" id="1_wl2a6"]
[ext_resource type="Script" uid="uid://d3r1hw7tg04do" path="res://addons/nodewebsockets/websocket_client.gd" id="2_f8yhb"]

[node name="Server" type="Node"]
script = ExtResource("1_wl2a6")

[node name="WebSocketClient" type="Node" parent="."]
script = ExtResource("2_f8yhb")
start_on_ready = false
protocols = PackedStringArray("proto")
metadata/_custom_type_script = "uid://d3r1hw7tg04do"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="connection_closed" from="WebSocketClient" to="." method="_on_web_socket_client_connection_closed"]
[connection signal="connection_established" from="WebSocketClient" to="." method="_on_web_socket_client_connection_established"]
[connection signal="data_received" from="WebSocketClient" to="." method="_on_web_socket_client_data_received"]
[connection signal="text_received" from="WebSocketClient" to="." method="_on_web_socket_client_text_received"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
